--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy New Year 2022</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="./Images/2022.jpg" type="image/x-icon">
 </head>
 <body>
     <nav>🅗🅐🅟🅟🅨 🅝🅔🅦 🅨🅔🅐🅡 ➋⓿➋➋ &#128525; &#128525;</nav>
     <div id="card">
-        <h2 style="padding-top: 10px;padding-left: 25px;padding-top: 20px;">𝑳̲̅𝒐̲̅𝒈̲̅𝒊̲̅𝒏̲̅ 𝒕̲̅𝒐̲̅ 𝒔̲̅𝒆̲̅𝒆̲̅ 𝒚̲̅𝒐̲̅𝒖̲̅𝒓̲̅ 𝒎̲̅𝒆̲̅𝒔̲̅𝒔̲̅𝒂̲̅𝒈̲̅𝒆̲̅ 𝒇̲̅𝒓̲̅𝒐̲̅𝒎̲̅ <span>𝒎̲̅𝑬̲̅ &#128513;</span></h2>
+        <h2 id="heading1">𝑳̲̅𝒐̲̅𝒈̲̅𝒊̲̅𝒏̲̅ 𝒕̲̅𝒐̲̅ 𝒔̲̅𝒆̲̅𝒆̲̅ 𝒚̲̅𝒐̲̅𝒖̲̅𝒓̲̅ 𝒎̲̅𝒆̲̅𝒔̲̅𝒔̲̅𝒂̲̅𝒈̲̅𝒆̲̅ 𝒇̲̅𝒓̲̅𝒐̲̅𝒎̲̅ <span id="span1">𝒎̲̅𝑬̲̅ &#128513;</span></h2>
         <div id="div1">            
             <label for="name">𝐸𝓃𝓉𝑒𝓇 𝓎𝑜𝓊𝓇 𝓁𝑜𝓋𝑒𝓁𝓎 𝓃𝒶𝓂𝑒:</label><br>
             <input id="uname" type="text" id="name" oninput="onChangeName()" ><br><br>
